# omniLLM_recsys

./: .gitignore  AMAZON_DATASET_INTEGRATION.md  IMPROVED_TRAINING_GUIDE.md  INTEGRATION.md  LICENSE  Makefile  NaN_LOSS_FIXES.md  QUICK_START_LOGGING.md  README.md  fix_dependencies.py  fix_training_issues.py  omni_qwen.ipynb  prepare_fashion_multitask.py  pyproject.toml  quick_fix.sh  quick_test.py  requirements.txt  setup.py  setup_wandb.py  test_dataset_sizes.py  test_recommendation_quick.py  train_fashion.py  upload_models.py
.ipynb_checkpoints/: AMAZON_DATASET_INTEGRATION-checkpoint.md  LOGGING-checkpoint.md  README-checkpoint.md
configs/sft/: fashion_multitask.yaml  recommendation_experiment.yaml  semantic_recommendation_experiment.yaml
configs/sft/.ipynb_checkpoints/: fashion_multitask-checkpoint.yaml  recommendation_experiment-checkpoint.yaml  semantic_recommendation_experiment-checkpoint.yaml
scripts/: train_multimodal.py  train_multimodal_improved.py  train_recommendation.py  train_recommendation_improved.py
scripts/.ipynb_checkpoints/: train_multimodal-checkpoint.py
src/any2any_trainer/: __init__.py
src/any2any_trainer/data/: __init__.py  collator.py  dataset.py  recommendation_dataset.py
src/any2any_trainer/models/: __init__.py  any2any.py  factory.py  multimodal.py  recommendation.py
src/any2any_trainer/training/: __init__.py  improved_trainer.py  trainer.py
src/any2any_trainer/utils/: __init__.py  config.py  logging.py  registry.py
temp_fashion_multitask_model/: added_tokens.json  special_tokens_map.json  tokenizer_config.json
