[tool.poetry]
name = "fashion-recommendations-llm"
version = "0.1.0"
description = "Multimodal LLM for Amazon Fashion Recommendations using Any2Any Trainer"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
any2any-trainer = {git = "https://github.com/your-username/any2any_trainer.git"}
datasets = "^2.0.0"
tqdm = "^4.60.0"
torch = "^2.0.0"
transformers = "^4.30.0"
pillow = "^8.0.0"
requests = "^2.25.0"
pandas = "^1.5.0"
numpy = "^1.21.0"
scikit-learn = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
